; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_multi-uv.c_start_timeout.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_multi-uv.c_start_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@timeout = common dso_local global i32 0, align 4
@on_timeout = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, i8*)* @start_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @start_timeout(i32* %0, i64 %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i64, i64* %5, align 8
  %8 = icmp slt i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %3
  %10 = call i32 @uv_timer_stop(i32* @timeout)
  br label %19

11:                                               ; preds = %3
  %12 = load i64, i64* %5, align 8
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %11
  store i64 1, i64* %5, align 8
  br label %15

15:                                               ; preds = %14, %11
  %16 = load i32, i32* @on_timeout, align 4
  %17 = load i64, i64* %5, align 8
  %18 = call i32 @uv_timer_start(i32* @timeout, i32 %16, i64 %17, i32 0)
  br label %19

19:                                               ; preds = %15, %9
  ret i32 0
}

declare dso_local i32 @uv_timer_stop(i32*) #1

declare dso_local i32 @uv_timer_start(i32*, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
